--- a/src/index.css
+++ b/src/index.css
@@ -13,12 +13,12 @@ min-height: 100vh;
 
 .bg-green {
     background-color: #BDCECC;
-}
-.bg-lightGreen {
+  }
+  .bg-lightGreen {
     background-color: rgba(255, 255, 255, 0.5);
-}
-
-.inputDiv {
+  }
+  
+  .inputDiv {
     display:flex;
     flex-direction:row;
     border:1px solid grey;
@@ -44,10 +44,35 @@ min-height: 100vh;
     padding-right: 1.25rem;
     transition: padding-right .5s;
   }
-
+  
   .inputDiv > button:hover {
     color: #778482 ;
     padding-right: 1.1rem;
-
+    
   }
   
+  
+  .btn-primary {
+    background-color: #A57C94;
+    width: 7rem;
+    padding: .3rem 0;
+    color: rgb(255, 255, 255);
+    font-weight: 500;
+    border: 2px solid #A57C94;
+  }
+  .btn-primary:hover {
+    border: 2px solid rgb(255, 255, 255);
+  }
+  
+  .btn-secondary {
+    font-weight: 500;
+    padding: .3rem 0;
+    border: 2px solid #A57C94 ;
+    color: #A57C94;
+    background-color: rgba(255, 255, 255, 0.5);
+    width: 7rem;
+    
+  }
+  .btn-secondary:hover {
+    border: 2px solid rgb(255, 255, 255);
+  }
